k8s/namespaces/monitoring-uptime/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-uptime
  labels:
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/enforce: privileged # NOTE: https://www.talos.dev/v1.7/kubernetes-guides/configuration/pod-security/
